# codemodder-python

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .semgrepignore  .sonarcloud.properties  CHANGELOG.md  CONTRIBUTING.md  DEV_README.md  Dockerfile  MANIFEST.in  Makefile  README.md  codecov.yaml  main.py  pylintrc  pyproject.toml  renovate.json  requirements.txt  setup.py
.github/: CODEOWNERS  dependabot.yml  pixeebot.yaml  pull_request_template.md
.github/workflows/: autoformat-pixeebot-prs.yaml  codemod_pygoat.yml  deploy_to_pypi.yml  image_to_aws.yml  integration_test.yml  lint.yml  pre-commit-autoupdate.yml  sonar_pixee.yml  test.yml
ci_tests/: test_pygoat_findings.py  test_webgoat_findings.py
codemodder/: __main__.py  cli.py  code_directory.py  dependency_manager.py  sarifs.py  semgrep.py
codemodder/codemods/: __init__.py  base_codemod.py  base_visitor.py  change.py  django_debug_flag_on.py  django_session_cookie_secure_off.py  harden_pyyaml.py  harden_ruamel.py  helper.py  limit_readline.py  order_imports.py  process_creation_sandbox.py  remove_unnecessary_f_str.py  remove_unused_imports.py  sarif_codemod.py  secure_random.py  semgrep_codemod.py  tempfile_mktemp.py  upgrade_sslcontext_tls.py  url_sandbox.py  utils.py  with_threading_lock.py
codemodder/report/: codetf_reporter.py
codemods/: secure_random.py
integration_tests/: README.md  base_test.py  conftest.py  test_add_requests_timeout.py  test_break_or_continue_out_of_loop.py  test_codemod_urls.py  test_combine_isinstance_issubclass.py  test_combine_startswith_endswith.py  test_dependency_manager.py  test_disable_graphql_introspection.py  test_django_debug_flag_on.py  test_django_json_response_type.py  test_django_model_without_dunder_str.py  test_django_receiver_on_top.py  test_django_session_cookie_secure_off.py  test_exception_without_raise.py  test_file_resource_leak.py  test_fix_assert_tuple.py  test_fix_dataclass_defaults.py  test_fix_deprecated_abstractproperty.py  test_fix_deprecated_logging_warn.py  test_fix_deprecated_pkg_resources.py  test_fix_empty_sequence_comparison.py  test_fix_float_equality.py  test_fix_hasattr_call.py  test_fix_math_isclose.py  test_fix_missing_self_or_cls.py  test_fix_mutable_params.py  test_fix_task_instantiation.py  test_flask_enable_csrf_protection.py  test_flask_json_response_type.py  test_flask_send_file_path_parameterization.py  test_harden_pickle_load.py  test_harden_pyyaml.py  test_harden_ruamel.py  test_https_connection.py  test_jinja2_autoescape.py  test_jwt_decode_verify.py  test_lazy_logging.py  test_limit_readline.py  (+43 more)
integration_tests/semgrep/: test_semgrep.py
integration_tests/sonar/: test_sonar_break_or_continue_out_of_loop.py  test_sonar_disable_graphql_introspection.py  test_sonar_django_jmodel_without_dunder_str.py  test_sonar_django_receiver_on_top.py  test_sonar_exception_without_raise.py  test_sonar_fix_assert_tuple.py  test_sonar_fix_float_equality.py  test_sonar_fix_math_isclose.py  test_sonar_fix_missing_self_or_cls.py  test_sonar_flask_json_response_type.py  test_sonar_jinja2_autoescape.py  test_sonar_jwt_decode_verify.py  test_sonar_numpy_nan_equality.py  test_sonar_remove_assertion_in_pytest_raises.py  test_sonar_secure_cookie.py  test_sonar_secure_random.py  test_sonar_sql_parameterization.py  test_sonar_tempfile_mktemp.py  test_sonar_url_sandbox.py  test_sonar_use_secure_protocols.py
requirements/: codemodder.txt  complexity.txt  lint.txt  test.txt
samples/: insecure_random.py
src/: main.py
src/codemodder/: __init__.py  __main__.py  change.py  cli.py  code_directory.py  codemodder.py  codeql.py  codetf.py  context.py  dependency.py  dependency_manager.py  diff.py  executor.py  file_context.py  global_state.py  llm.py  logging.py  providers.py  python_repo_manager.py  registry.py  result.py  sarifs.py  semgrep.py  sonar_results.py  sql_examples.py  temp.py  temporary.py  test.py  tmp.py  update_pyproject.py
src/codemods/: secure_random.py  url_sandbox.py
src/core_codemods/: __init__.py  add_requests_timeouts.py  break_or_continue_out_of_loop.py  combine_calls_base.py  combine_isinstance_issubclass.py  combine_startswith_endswith.py  delete_me.py  disable_graphql_introspection.py  django_debug_flag_on.py  django_json_response_type.py  django_model_without_dunder_str.py  django_receiver_on_top.py  django_session_cookie_secure_off.py  enable_jinja2_autoescape.py  exception_without_raise.py  file_resource_leak.py  fix_assert_tuple.py  fix_async_task_instantiation.py  fix_dataclass_defaults.py  fix_deprecated_abstractproperty.py  fix_deprecated_logging_warn.py  fix_deprecated_pkg_resources.py  fix_empty_sequence_comparison.py  fix_float_equality.py  fix_hasattr_call.py  fix_math_isclose.py  fix_missing_self_or_cls.py  fix_mutable_params.py  fix_task_instantiation.py  flask_enable_csrf_protection.py  flask_json_response_type.py  flask_send_file_path_parameterization.py  harden_pickle_load.py  harden_pyyaml.py  harden_ruamel.py  https_connection.py  invert_boolean_check.py  jwt_decode_verify.py  lazy_logging.py  limit_readline.py  (+36 more)
src/scripts/: generate_docs.py
tests/: README.md  conftest.py  shared.py  test_ancestorpatterns_mixin.py  test_basetype.py  test_change.py  test_cli.py  test_code_directory.py  test_codemod_docs.py  test_codemodder.py  test_codeql.py  test_codetf.py  test_codetf_v3_serializable.py  test_context.py  test_dependency_manager.py  test_diff.py  test_file_context.py  test_format_string_parser.py  test_libcst_transformer.py  test_linearize_string_expression.py  test_llm.py  test_logging.py  test_main.py  test_nameresolution_mixin.py  test_python_repo_manager.py  test_regex_transformer.py  test_registry.py  test_resolve_expressions.py  test_results.py  test_sarif_processing.py  test_semgrep.py  test_sonar_results.py  test_update_finding_metadata.py  test_update_pyproject.py  test_version.py  test_xml_transformer.py  validations.py
tests/cli/: test_cli.py  test_main.py
tests/codemods/: base_codemod_test.py  conftest.py  test_add_requests_timeouts.py  test_async_fix_task_instantiation.py  test_base_codemod.py  (+82 more)
(+366 files in other folders)
