[build-system]
requires = ["setuptools", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Pixee", email = "python@pixee.ai"}]
dynamic = ["version"]
name = "codemodder"
requires-python = ">=3.10.0"
readme = "README.md"
license = {file = "LICENSE"}
description = "A pluggable framework for building codemods in Python"
dependencies = [
    "GitPython<4",
    "isort>=5.12,<5.14",
    "libcst>=1.1,<1.5",
    "packaging>=23.2,<25.0",
    "pydantic~=2.8.0",
    "pylint>=3.2,<3.3",
    "python-json-logger~=2.0.0",
    "PyYAML~=6.0.0",
    "semgrep>=1.81,<1.82",
    "toml~=0.10.2",
    "tomlkit~=0.13.0",
    "wrapt~=1.16.0",
    "chardet~=5.2.0",
    "setuptools~=71.0",
]
keywords = ["codemod", "codemods", "security", "fix", "fixes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://codemodder.io"
Repository = "https://github.com/pixee/codemodder-python"

[project.scripts]
codemodder = "codemodder.codemodder:main"
generate-docs = 'codemodder.scripts.generate_docs:main'
get-hashes = 'codemodder.scripts.get_hashes:main'

[project.optional-dependencies]
test = [
    "coverage>=7.6,<7.7",
    "coverage-threshold~=0.4",
    "defusedxml==0.7.1",
    "types-defusedxml==0.7.0.20240218",
    "flask-wtf==1.2.1",
    "types-WTForms==3.1.0.20240425",
    "Flask<4",
    "httpx~=0.27",
    "Jinja2~=3.1.2",
    "jsonschema~=4.23.0",
    "lxml>=4.9.3,<5.3.0",
    "openai>=1.35,<1.38",
    "mock==5.1.*",
    "pre-commit<4",
    "Pyjwt~=2.8.0",
    "pytest>=8.2,<9",
    "pytest-asyncio~=0.23",
    "pytest-cov>=4.1,<5.1",
    "pytest-mock>=3.12,<3.15",
    "pytest-randomly==3.*",
    "pytest-xdist==3.*",
    "requests~=2.32.1",
    "security==1.3.1",
    "types-mock==5.1.*",
    "django>=4,<6",
    "numpy~=2.0.0",
    "flask_wtf~=1.2.0",
    "fickling~=0.1.0,>=0.1.3",
    "graphql-server~=3.0.0b7",
]
complexity = [
    "radon==6.0.*",
    "xenon==0.9.*",
]
openai = [
    "openai>=1.35,<1.38",
]
all = [
    "codemodder[test]",
    "codemodder[complexity]",
]

[project.entry-points.codemods]
core = "core_codemods:registry"
sonar = "core_codemods:sonar_registry"
defectdojo = "core_codemods:defectdojo_registry"
semgrep = "core_codemods:semgrep_registry"

[project.entry-points.sarif_detectors]
"semgrep" = "codemodder.semgrep:SemgrepSarifToolDetector"
"codeql" = "codemodder.codeql:CodeQLSarifToolDetector"

[tool.setuptools]

[tool.setuptools.package-data]
"core_codemods.semgrep" = ["src/core_codemods/semgrep/*.yaml"]
"core_codemods.docs" = ["src/core_codemods/docs/*.md"]

[tool.setuptools_scm]
version_file = "src/codemodder/_version.py"

[tool.pytest.ini_options]
# Ignore integration tests and ci tests by default
testpaths = ["tests"]

[tool.black]
extend-exclude = '''
/(
  tests/samples |
  src/codemodder/_version.py
)/
'''

[coverage-threshold]
line_coverage_min = 93
[coverage-threshold.modules."src/core_codemods/"]
# Detect if a codemod is missing unit or integration tests
file_line_coverage_min = 50
