[build-system]
requires = ["setuptools", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Pixee", email = "python@pixee.ai"}]
dynamic = ["version"]
name = "codemodder"
requires-python = ">=3.10.0"
readme = "README.md"
license = {file = "LICENSE"}
description = "A pluggable framework for building codemods in Python"
dependencies = [
    "boltons>=21.0,<25.1",
    "GitPython<4",
    "isort>=5.12,<6.1",
    "libcst>=1.8,<1.9",
    "packaging>=24.2,<25.1",
    "pydantic~=2.11.5",
    "pylint>=3.3,<3.4",
    "python-json-logger~=3.3.0",
    "PyYAML~=6.0.0",
    "toml~=0.10.2",
    "tomlkit~=0.13.0",
    "wrapt~=1.17.0",
    "chardet~=5.2.0",
    "sarif-pydantic~=0.5.1",
    "setuptools~=80.0",
]
keywords = ["codemod", "codemods", "security", "fix", "fixes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://codemodder.io"
Repository = "https://github.com/pixee/codemodder-python"

[project.scripts]
codemodder = "codemodder.codemodder:main"
codemodder-remediation = "codemodder.codemodder:remediate"
generate-docs = 'codemodder.scripts.generate_docs:main'
get-hashes = 'codemodder.scripts.get_hashes:main'

[project.optional-dependencies]
semgrep = [
    "semgrep>=1.128,<1.129",
]
test = [
    "azure-ai-inference>=1.0.0b1,<2.0",
    "coverage>=7.9,<7.10",
    "coverage-threshold~=0.4",
    "defusedxml==0.7.1",
    "types-defusedxml==0.7.0.20250708",
    "flask-wtf==1.2.2",
    "types-WTForms==3.2.1.20250602",
    "Flask<4",
    "httpx~=0.27",
    "Jinja2~=3.1.2",
    "jsonschema~=4.25.0",
    "lxml>=6.0.0,<6.1.0",
    "openai>=1.97,<1.98",
    "mock==5.2.*",
    "pre-commit<5",
    "Pyjwt~=2.10.0",
    "pytest>=8.2,<9",
    "pytest-asyncio~=1.0",
    "pytest-cov>=6.1,<7",
    "pytest-mock>=3.12,<3.15",
    "pytest-randomly==3.*",
    "pytest-xdist==3.*",
    "requests~=2.32.1",
    "security==1.3.1",
    "types-mock==5.2.*",
    "django>=4,<6",
    "numpy ==2.2.6; python_version == '3.10'",
    "numpy ~= 2.3.0; python_version > '3.10'",
    "flask_wtf~=1.2.0",
    "fickling~=0.1.0,>=0.1.3",
    "graphql-server~=3.0.0b7",
    "unidiff>=0.7.5",
    "semgrep>=1.128,<1.129",
]
complexity = [
    "radon==6.0.*",
    "xenon==0.9.*",
]
openai = [
    "openai>=1.97,<1.98",
]
azure = [
    "azure-ai-inference>=1.0.0b1,<2.0",
]

all = [
    "codemodder[test]",
    "codemodder[complexity]",
]

[project.entry-points.codemods]
core = "core_codemods:registry"
sonar = "core_codemods:sonar_registry"
defectdojo = "core_codemods:defectdojo_registry"
semgrep = "core_codemods:semgrep_registry"

[project.entry-points.sarif_detectors]
"semgrep" = "codemodder.semgrep:SemgrepSarifToolDetector"
"codeql" = "codemodder.codeql:CodeQLSarifToolDetector"

[tool.setuptools]

[tool.setuptools.package-data]
"core_codemods.semgrep" = ["src/core_codemods/semgrep/*.yaml"]
"core_codemods.docs" = ["src/core_codemods/docs/*.md"]

[tool.setuptools_scm]
version_file = "src/codemodder/_version.py"

[tool.pytest.ini_options]
# Ignore integration tests and ci tests by default
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.black]
extend-exclude = '''
/(
  tests/samples |
  src/codemodder/_version.py
)/
'''

[coverage-threshold]
line_coverage_min = 92
[coverage-threshold.modules."src/core_codemods/"]
# Detect if a codemod is missing unit or integration tests
file_line_coverage_min = 50
